--- a/rqt/rqt_logger_level/mainpage.dox
+++ b/rqt/rqt_logger_level/mainpage.dox
@@ -2,13 +2,5 @@
 \mainpage
 \htmlinclude manifest.html
 
-\b rqt_logger_level 
-
-<!-- 
-Provide an overview of your package.
--->
-
--->
-
-
+\b rqt_logger_level provides a GUI plugin for configuring the logger level of ROS nodes.
 */
